--- a/frontend/src/app/search-box/search-box.component.html
+++ b/frontend/src/app/search-box/search-box.component.html
@@ -1,11 +1,4 @@
 <div>
     <h5>Buscar nombre de usuario</h5>
-    <i class="material-icons">search</i><input #searchBox id="search-box" type="text" (input)="search(searchBox.value)">
-    <ul>
-        <li class="search-result" *ngFor="let usuario of usuarios$ | async" >
-            <a #searchLink routerLink="/api/usuarios/{{usuario.nombreUsuario}}">
-                {{usuario.nombreUsuario}}
-            </a>
-        </li>
-    </ul>
+    <i class="material-icons">search</i><input #searchBox id="search-box" autocomplete="off" type="text" (input)="search(searchBox.value)"><i class="material-icons">person</i>
 </div>
