--- a/frontend/src/app/search-box/search-box.component.css
+++ b/frontend/src/app/search-box/search-box.component.css
@@ -1,6 +1,16 @@
 #search-box {
   width: 300px;
   height: 20px;
+  background-color: #ef5350;
+  border-radius: 40px;
+  border-left: 10px;
+  border-right: 10px;
+  padding: 20px;
+  color: white;
+}
+
+::placeholder{
+  color: white;
 }
 
 a {
