--- a/frontend/src/app/listado-usuarios/listado-usuarios.component.html
+++ b/frontend/src/app/listado-usuarios/listado-usuarios.component.html
@@ -2,8 +2,7 @@
     <h3>Listado de usuarios</h3>
 </div>
 <div class="container">
-    <h5 *ngIf="usuarios$ == ''">No existen Usuarios registrados</h5>
-    <div *ngIf="usuarios$ != null">
+    <div>
         <app-search-box (listUsuarios)="updateList($event)"></app-search-box>
         <table class="hightlight">
             <thead>
