Terminado Agregar y cambio Listado

--- a/frontend/src/app/listado-tareas-asignadas/listado-tareas-asignadas.component.html
+++ b/frontend/src/app/listado-tareas-asignadas/listado-tareas-asignadas.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
     <h5 *ngIf="tareas == ''">No existen Tareas asignadas</h5>
-    <table class="highlight" *ngIf="tareas != ''">
+    <table class="striped" *ngIf="tareas != ''">
         <thead>
             <tr>
                 <th>Descripcion</th>
