--- a/frontend/src/app/listado-usuarios/listado-usuarios.component.html
+++ b/frontend/src/app/listado-usuarios/listado-usuarios.component.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div>
         <app-search-box (listUsuarios)="updateList($event)"></app-search-box>
-        <table class="hightlight">
+        <table class="striped">
             <thead>
                 <tr>
                     <th>Nombre</th>
