--- a/frontend/src/app/listado-tareas-asignadas/listado-tareas-asignadas.component.css
+++ b/frontend/src/app/listado-tareas-asignadas/listado-tareas-asignadas.component.css
@@ -10,3 +10,15 @@ th {
 td {
     text-align: center;
 }
+
+table.striped>tbody>tr:hover {
+    background-color: #ef9a9a;
+}
+table.striped>tbody>tr {
+    background-color: #ef5350;
+    color: white;
+}
+table.striped>thead>tr {
+    background-color: #c62828;
+    color: white;
+}
