--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -3,6 +3,7 @@
       <a class="brand-logo center">Sistema de Asignación de Tareas</a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a routerLink="/api/usuarios">Listado Usuarios</a></li>
+        <li><a routerLink="/api/agregar-usuario">Agregar Usuario</a></li>
       </ul>
     </div>
 </nav>
